Finished the routes for guest collection
